refactored build
