# connector/controllers/discover_snmp.py
@@ -2,6 +2,7 @@ from connector.models import DiscoverSNMPv2, DiscoverSNMPv3
 from connector.constants import MIB_MAP
 from connector.controllers.core import ControllerResult, validate_params
 from connector.controllers.snmp_client import SNMPV3Client, SNMPV2Client
+import re
 
 
 def _update_node_type(facts, sysDescr):
@@ -12,6 +13,14 @@ def _update_node_type(facts, sysDescr):
         facts['node_type'] = "linux"
 
     return facts
+
+
+def _update_sys_name(facts, sysName):
+    PATTERN = re.compile('SNMPv2-MIB::sysName.0 = (.*)')
+
+    match = PATTERN.findall(sysName)
+    if len(match) == 1:
+        facts['assetHostname'] = match.pop()
 
 
 def _get_node_facts(client):
@@ -28,7 +37,18 @@ def _get_node_facts(client):
 
                 _update_node_type(facts, sys_description)
 
-                return ControllerResult(data=facts, result=True, msg="Successful", status=200)
+    result = client.get(MIB_MAP.get("sysName"))
+    if isinstance(result, dict):
+        if result.get("errorIndication"):
+            return ControllerResult(data=None, result=False, msg=f"ERROR: {client.host} unreachable", status=409)
+
+        if result.get("varBinds"):
+            for var in result.get("varBinds"):
+                sysName = var.prettyPrint()
+
+                _update_sys_name(facts, sysName)
+
+    return ControllerResult(data=facts, result=True, msg="Successful", status=200)
 
 
 def controller_discover_snmpv3(params):
